# CliLoci

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  SKILL.md
.github/workflows/: release.yml
completions/: loci.bash  loci.fish  loci.zsh
docs/: usage.md
npm/: install.js  package.json
scripts/: loci-list
src/: args.rs  exec.rs  list.rs  main.rs  metadata.rs  platform.rs  scanner.rs  ui.rs  usage.rs
tests/: cli.rs
