[package]
name = "loci"
version = "0.2.1"
edition = "2021"
description = "A minimalist CLI launcher — list, filter, and jump to any executable on your PATH. AI Agent friendly with --json output."
categories = ["command-line-utilities", "development-tools"]
keywords = ["cli", "launcher", "fuzzy-finder", "path", "executable", "tool-discovery", "agent", "ai"]
license = "MIT"
repository = "https://github.com/Yaemikoreal/CliLoci"
homepage = "https://github.com/Yaemikoreal/CliLoci#readme"
readme = "README.md"

[dependencies]
skim = { version = "4.6", default-features = false, features = ["frizbee"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[profile.release]
opt-level = "z"     # optimize for size
lto = true          # link-time optimization
strip = true        # strip symbols
codegen-units = 1   # single codegen unit for better optimization
panic = "abort"     # remove unwind tables
